tests/fail/08-partial-seal.rs
use sealed::sealed;

#[sealed]
pub trait A {
	#[seal(callable)]
	fn b() {}
}

fn main() {}
